# ssm-tui-connector

./: README.md
tui-x-project/: .dockerignore  Cargo.toml  Makefile  Makefile.toml
tui-x-project/src/: app.rs  main.rs  utils.rs
tui-x-project/src/inputs/: events.rs  mod.rs
tui-x-project/src/ui/: blockchain.rs  cryptocurrency.rs  home.rs  mod.rs  news.rs  stocks.rs  ui.rs  utils.rs
tui-x-project/src/vc/: mod.rs  vc.rs
