[package]
name = "tui-x-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
structopt = "0.3.26"
termion = "1.5.6"
tokio = { version = "1.17.0", features = ["full"] }
tui = { version = "0.17.0", default-features = false, features = ["termion"] }
url = "2.2.2"
