[package]
name = "tui-x-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
humantime = "2.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
termion = "1.5.6"
tokio = { version = "1.17.0", features = ["full"] }
tui = { version = "0.17.0", default-features = false, features = ["termion"] }
url = "2.2.2"
